# sma_backtester

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: SMA_Backtest.ipynb  SMA_Interactive.ipynb
notebooks/.ipynb_checkpoints/: Quant SMA Backtester-checkpoint.ipynb  SMA_Backtest-checkpoint.ipynb  SMA_Backtest.nbconvert-checkpoint.ipynb  SMA_Interactive-checkpoint.ipynb
scripts/: run_backtest.py
src/: backtester.py  data_loader.py  indicators.py  metrics.py  signals.py
src/sma_backtester.egg-info/: PKG-INFO  SOURCES.txt
