[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sma-backtester"
version = "0.1.0"
description = "A production-ready Simple Moving Average (SMA) Crossover Backtester."
authors = [
    { name = "Ryan Cooley", email = "" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "yfinance",
    "pandas-datareader"
] 